--- a/index.html
+++ b/index.html
@@ -16,12 +16,8 @@
   <body>
     <!-- Main container -->
     <div class="containerM">
-      <!-- Header div -->
-      <header>
-        <img src="assests/images/logo.png" alt="logo" width="150px" height="100px">
-        <!-- <a href="login.html" data-toggle="modal" data-target="#example-modal" target="_self" class="btn btn-light">Login</a> -->
-        <button type="button" class="btn btn-light" data-toggle="modal" data-target="#login-modal" id="login">Login</button>
-      </header>
+      <!-- Javascript template Header -->
+      <my-header></my-header>
       <!-- Content - main -->
       <div class=".main">
         <!-- Search Bar div -->
@@ -29,7 +25,7 @@
           <div class="searchbar"><input type="text" name="searchbar" value="" placeholder="City"></div>
         </div>
         <!-- Images div -->
-        <div class="images">
+        <div class="images" id="images-div-1">
             <div class="image">
               <a href="list.html" target="_self">
                 <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt="New Delhi"></a>
@@ -48,8 +44,8 @@
                 <div class="imgtext">Kolkata</div>
             </div>
         </div>
-        <!--2nd Div for images-->
-        <div class="images">
+        <!--2nd Div for images, which is to be shown only after clicking view more button, and hide on clicking view less button-->
+        <div class="images" id="images-div-2">
             <div class="image">
                 <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/4d/46/b8/chennai-madras.jpg" alt="Chennai"></a>
                 <div class="imgtext">Chennai</div>
@@ -68,7 +64,8 @@
             </div>
         </div>
         <!-- View more link -->
-        <div id="viewmore"><a href="#" class="btn btn-secondary">View More</a></div>
+        <div id="viewmore"><a href="#images-div-2" class="btn btn-secondary" id="viewmorelink">View More</a></div>
+        <div id="viewless"><a href="#images-div-1" class="btn btn-secondary" id="viewlesslink">View Less</a></div>
       </div>
       <!--MODAL CODE-->
       <!--Login modal-->
@@ -85,16 +82,16 @@
                               <form id="login-form">
                                   <div class="login-field">
                                       <label for="username">Username: </label>
-                                      <input type="text" id="username" name="username" placeholder="Enter Username" required />
+                                      <input type="text" id="username" name="username" placeholder="Enter Username" value="" required />
                                   </div>
                                   <div class="login-field">
                                       <label for="password">Password: </label>
-                                      <input type="password" id="password" name="password" placeholder="Enter Password" required />
+                                      <input type="password" id="password" name="password" placeholder="Enter Password" value="" required />
                                   </div>
                               </form>
                           </div>
                           <div class="modal-footer">
-                              <button id="login-button" type="button" class="btn btn-primary" data-dismiss="modal">Login</button>
+                              <button id="loginbutton" type="button" class="btn btn-primary" data-dismiss="modal">Login</button>
                           </div>
                       </div>
                   </div>
@@ -125,20 +122,10 @@
                             </div>
                         </div>
                     </div>
-      <!-- Footer div -->
-      <footer>
-        <!-- Contact us link -->
-        <!-- <a href="contact.html" target="_self" class="btn btn-info">Contact Us</a> -->
-        <button type="button" class="btn btn-info" data-toggle="modal" data-target="#contact-modal" id="contact">Contact Us</button>
-        <!-- Social media links -->
-        <div class="social-links">
-          <a href="https://www.facebook.com/" target="_blank"><img src="assests/images/facebook.png" alt="facebook"></a>
-          <a href="https://www.instagram.com/" target="_blank"><img src="assests/images/instagram.png" alt="instagram"></a>
-          <a href="https://twitter.com/" target="_blank"><img src="assests/images/twitter.png" alt="twitter"></a>
-        </div>
-        <!--Copyright text-->
-        <span id="copyright">&copy; 2021 ROOM SEARCH PVT. LTD.</span>
-      </footer>
+      <!-- Javascript template Footer -->
+      <my-footer></nyfooter>
     </div>
+    <script src="scripts/common.js"></script>
+    <script src="scripts/index.js"></script>
   </body>
 </html>
